ensure wrap has no margin side effects

--- a/scss/custom/objects/_layout.scss
+++ b/scss/custom/objects/_layout.scss
@@ -3,7 +3,8 @@
 \*------------------------------------*/
 %wrap {
 	max-width: 1280px;
-	margin: 0 auto;
+	margin-right: auto;
+	margin-left: auto;
 	@include px-and-rem(padding-left, 1);
 	@include px-and-rem(padding-right, 1);
 }
